--- a/style.css
+++ b/style.css
@@ -371,6 +371,9 @@ section .title::after{
 .skills-content .right .js::before{
     width: 80%;
 }
+.skills-content .right .jss::before{
+    width: 98%;
+}
 .skills-content .right .php::before{
     width: 50%;
 }
